# Data-manage-OOP-Dauphine-project

./: .gitignore  LICENSE  README.md  api_log.txt  mock_example.py  pyproject.toml  requirements.txt
docs/: index.md
fast_api_builder/: test.py
fast_api_builder/abc_classes/: ABC_classes.py
fast_api_builder/services/: ABC_classes.py  api_logger.py  constants.py  fast_api_builder.py  types.py  utils.py
fast_api_builder/utils/: constants.py  types.py  utils.py
