[tool.poetry]
name = "fast-api-builder"
version = "0.1.0"
description = "FAST API builder dauphine Project"
authors = ["BaptisteZloch <bzloch@hotmail.fr>","AymanOthmane <ayman.othmane@daupine.eu>","MiloSeguin <milo.seguin@dauphine.eu>"]
maintainers = ["BaptisteZloch <bzloch@hotmail.fr>","AymanOthmane <ayman.othmane@daupine.eu>","MiloSeguin <milo.seguin@dauphine.eu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BaptisteZloch/Data-manage-OOP-Dauphine-project/"
keywords = ["data", "api","decorators"]
packages = [{include = "fast_api_builder"}]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BaptisteZloch/Data-manage-OOP-Dauphine-project/issues"
"Homepage" = "https://github.com/BaptisteZloch/Data-manage-OOP-Dauphine-project/"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
